[update] add references

--- a/milos_ojdanics_reference_pool.bib
+++ b/milos_ojdanics_reference_pool.bib
@@ -80,7 +80,24 @@ JJJJJJJJ
 
 KKKKKKKKK
 
+@article{kulli:dominators_nodes,
+  title={The common minimal dominating graph},
+  author={Kulli, VR and Janakiram, B and Niranjan, KM},
+  journal={Indian Journal of Pure and Applied Mathematics},
+  volume={27},
+  pages={193--196},
+  year={1996},
+  publisher={INDIAN NATIONAL SCIENCE ACADEMY}
+}
 
+@inproceedings{kim:class_mutation,
+  title={Class mutation: Mutation testing for object-oriented programs},
+  author={Kim, Sunwoo and Clark, John A and McDermid, John A},
+  booktitle={Proc. Net. ObjectDays},
+  pages={9--12},
+  year={2000},
+  organization={Net. Objects Erfurt, Germany}
+}
 
 
 LLLLLLLL
@@ -89,7 +106,13 @@ LLLLLLLL
 
 MMMMMMMMM
 
-
+@inproceedings{marick:coverage_misuse,
+  title={How to misuse code coverage},
+  author={Marick, Brian and Smith, John and Jones, Mark},
+  booktitle={Proceedings of the 16th Interational Conference on Testing Computer Software},
+  pages={16--18},
+  year={1999}
+}
 
 NNNNNNNNN
 
@@ -106,6 +129,17 @@ OOOOOOOOO
   organization={IEEE}
 }
 
+@article{offutt:sufficient_mutation,
+  title={An experimental determination of sufficient mutant operators},
+  author={Offutt, A Jefferson and Lee, Ammei and Rothermel, Gregg and Untch, Roland H and Zapf, Christian},
+  journal={ACM Transactions on Software Engineering and Methodology (TOSEM)},
+  volume={5},
+  number={2},
+  pages={99--118},
+  year={1996},
+  publisher={ACM New York, NY, USA}
+}
+
 @inproceedings{offutt:equivalence,
   title={Detecting equivalent mutants and the feasible path problem},
   author={Offutt, A Jefferson and Pan, Jie},
@@ -115,6 +149,16 @@ OOOOOOOOO
   organization={IEEE}
 }
 
+@article{offutt:mutation_dataflow,
+  title={An experimental evaluation of data flow and mutation testing},
+  author={Offutt, A Jefferson and Pan, Jie and Tewary, Kanupriya and Zhang, Tong},
+  journal={Software: Practice and Experience},
+  volume={26},
+  number={2},
+  pages={165--176},
+  year={1996},
+  publisher={Wiley Online Library}
+}
 
 PPPPPPPPP
 
@@ -176,3 +220,19 @@ YYYYYYYYY
 
 
 ZZZZZZZZZ
+
+@article{zhang:ml_slr,
+  title={Machine learning testing: Survey, landscapes and horizons},
+  author={Zhang, Jie M and Harman, Mark and Ma, Lei and Liu, Yang},
+  journal={IEEE Transactions on Software Engineering},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{zampetti:ci-cd_survey,
+  title={Continuous Integration and Delivery Practices for Cyber-Physical Systems: An Interview-Based Study},
+  author={Zampetti, Fiorella and Tamburri, Damian A and Panichella, Sebastiano and Panichella, Annibale and Di Penta, Massimiliano and Canfora, Gerardo},
+  journal={ACM Transactions on Software Engineering and Methodology},
+  year={2022},
+  publisher={Association for Computing Machinery (ACM)}
+}
