[update] add references

--- a/milos_ojdanics_reference_pool.bib
+++ b/milos_ojdanics_reference_pool.bib
@@ -16,6 +16,26 @@
 
 AAAAAAAA
 
+@inproceedings{andrews:faults_mutation,
+  title={Is mutation an appropriate tool for testing experiments?},
+  author={Andrews, James H and Briand, Lionel C and Labiche, Yvan},
+  booktitle={Proceedings of the 27th international conference on Software engineering},
+  pages={402--411},
+  year={2005}
+}
+
+@article{andrews:coverage_mutation,
+  title={Using mutation analysis for assessing and comparing testing coverage criteria},
+  author={Andrews, James H and Briand, Lionel C and Labiche, Yvan and Namin, Akbar Siami},
+  journal={IEEE Transactions on Software Engineering},
+  volume={32},
+  number={8},
+  pages={608--624},
+  year={2006},
+  publisher={IEEE}
+}
+
+
 BBBBBBBB
 
 
@@ -97,6 +117,14 @@ KKKKKKKKK
   pages={9--12},
   year={2000},
   organization={Net. Objects Erfurt, Germany}
+}
+
+@inproceedings{kaufman:prioritizing_mutation,
+  title={Prioritizing mutants to guide mutation testing},
+  author={Kaufman, Samuel J and Featherman, Ryan and Alvin, Justin and Kurtz, Bob and Ammann, Paul and Just, Ren{\'e}},
+  booktitle={Proceedings of the 44th International Conference on Software Engineering},
+  pages={1743--1754},
+  year={2022}
 }
 
 
