--- a/milos_ojdanics_reference_pool.bib
+++ b/milos_ojdanics_reference_pool.bib
@@ -142,6 +142,15 @@ MMMMMMMMM
   year={1999}
 }
 
+@inproceedings{ma:class_mutation,
+  title={Evaluation of mutation testing for object-oriented programs},
+  author={Ma, Yu-Seung and Harrold, Mary Jean and Kwon, Yong-Rae},
+  booktitle={Proceedings of the 28th international conference on Software engineering},
+  pages={869--872},
+  year={2006}
+}
+
+
 NNNNNNNNN
 
 
@@ -198,7 +207,13 @@ QQQQQQQQQ
 
 RRRRRRRRR
 
-
+@inproceedings{just:mutation_context,
+  title={Inferring mutant utility from program context},
+  author={Just, Ren{\'e} and Kurtz, Bob and Ammann, Paul},
+  booktitle={Proceedings of the 26th ACM SIGSOFT International Symposium on Software Testing and Analysis},
+  pages={284--294},
+  year={2017}
+}
 
 SSSSSSSSS
 
